Minor fixes Changed the min-width of the main page container to 1000px Fixed an error bug where the messages were showing up with an empty input value Added a new validation/error message. Now you can't submit white spaces

--- a/src/components/Tasks/Tasks.css
+++ b/src/components/Tasks/Tasks.css
@@ -1,6 +1,6 @@
 .task-description {
     color: #00000071;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.356);
+    border-bottom: 2px solid #0000002d;
 }
 
 .task-container {
