--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   min-height: 100vh;
   width: 100%;
-  max-width: 1240px;
+  max-width: 1000px;
   margin: 0 auto;
   padding: 10px 15px;
 }
